--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     </div>
     <a href="https://suspicious-kirch-ac96d7.netlify.app">Paula's webpage </a><br>
-    <a href="https://friendly-bhaskara-ce0554.netlify.app">Tristan's webpage</a>
+    <a href="https://friendly-bhaskara-ce0554.netlify.app">Tristan's webpage</a><br>
+    <br>
+    <br>
 
   </body>
 
